Compiler/tests/good/context2.nx
val x : int = 3;

printn(x);

if(1)
{
    printn(x);
}
