Compiler/tests/bad/set7.nx
function a() : int
{
    return 2;
}

type t = a();
